# BulletGL

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
examples/Sandbox/: CMakeLists.txt
examples/Sandbox/src/: Programm.cpp
res/Models/Sphere/: 3d-model.mtl
res/Models/sponza/: Background_Height.tga  ChainTexture_Height.tga  Lion_Height.tga  Sponza_Arch_Height.tga  Sponza_Bricks_a_Height.tga  Sponza_Ceiling_Height.tga  Sponza_Column_a_Height.tga  Sponza_Column_b_Height.tga  Sponza_Column_c_Height.tga  Sponza_Curtain_Blue_Height.tga  Sponza_Curtain_Green_Height.tga  Sponza_Curtain_Red_Height.tga  Sponza_Details_Height.tga  Sponza_Fabric_Blue_Height.tga  Sponza_Fabric_Green_Height.tga  Sponza_Fabric_Red_Height.tga  Sponza_FlagPole_Height.tga  Sponza_Floor_Height.tga  Sponza_Roof_Height.tga  Sponza_Thorn_Height.tga  VaseHanging_Height.tga  VasePlant_Height.tga  VaseRound_Height.tga  Vase_Height.tga  sponza.mtl
res/Models/teapot_pbr/: uploads_files_3449455_teapotf.blend  uploads_files_3449455_teapotf.blend1  uploads_files_3449455_teapotf.mtl
res/Shaders/: addShader.frag  blitShader.frag  blitShader.vert  buildHouse.geom  colorShader.frag  colorShader.vert  cubemapShader.frag  cubemapShader.vert  explosion.geom  extractBlur.frag  horizontalBlur.frag  screenShader.frag  screenShader.vert  shadowMap.frag  shadowMap.vert  skyboxShader.frag  skyboxShader.vert  solidColor.frag  solidColor.vert  texShader.frag  texShader.vert  tunableColor.frag  uiShader.frag  uiShader.vert
src/BulletGL/: Application.cpp  Application.h  Camera.cpp  Camera.h  Command.cpp  Command.h  CommandBuffer.cpp  CommandBuffer.h  Core.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  Programm.cpp  Render.cpp  Render.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Transform.h  UI.cpp  UI.h  Vector2.h  Vector3.h  Window.cpp  Window.h  glad.c
src/BulletGL/Managers/: CameraManager.h  SceneManager.cpp  SceneManager.h
src/BulletGL/Utils/Resources/: ModelLoader.h  Resources.cpp  Resources.h  TextureLoader.h
submodules/: bootstrap.json
